--- a/decathlon-app/src/assets/base.css
+++ b/decathlon-app/src/assets/base.css
@@ -5,7 +5,7 @@
   --vt-c-white-mute: #f2f2f2;
 
   --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
+  --vt-c-black-soft: #2e2e2e;
   --vt-c-black-mute: #282828;
 
   --vt-c-indigo: #2c3e50;
@@ -61,7 +61,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background: var(--vt-c-black-soft);
   transition:
     color 0.5s,
     background-color 0.5s;
