--- a/decathlon-app/src/assets/main.css
+++ b/decathlon-app/src/assets/main.css
@@ -3,22 +3,9 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+  border-radius: 1rem;
+  box-shadow: 0 0 60px 0 black;
 }
 
 @media (min-width: 1024px) {
@@ -26,10 +13,11 @@ a,
     display: flex;
     place-items: center;
   }
+}
 
-  /* #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  } */
+
+@media (max-width: 1024px) {
+  #app {
+    font-size: 0.9rem;
+  }
 }
